--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="play_button_text">Play</string>
     <string name="android_trivia_title">MY ANDROID TRIVIA</string>
+    <string name="more_info">More Info</string>
+    <string name="more_info_text">The Android Trivia application is an application that asks the user trivia questions about Android development: layouts,navigation etc. </string>
 </resources>
